--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,9 +12,20 @@ html,
 body {
   @apply dark:text-white text-slate-800 dark:bg-slate-900 bg-white;
 }
+
+h1 {
+  @apply font-extrabold text-3xl mb-2 mt-1 leading-tight;
+}
+h2 {
+  @apply font-bold text-2xl mb-2 mt-1 leading-tight;
+}
+h3 {
+  @apply font-bold text-xl mb-2 mt-1 leading-tight;
+}
 .swichicons {
   @apply dark:text-white text-slate-800;
 }
+
 .rfm-overlay::before,
 .rfm-overlay::after {
   @apply bg-white dark:bg-gradient-to-r from-slate-900;
